--- a/index.html
+++ b/index.html
@@ -3,71 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Хамрокулов Самир - Портфолио</title>
+    <title>Портфолио — Хамрокулов Самир</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="page-container">
-        <header class="header">
-            <h1>Мой сайт-портфолио</h1>
-        </header>
-
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+<div class="page-container">
+    <header class="header">
+        <h1>Мой сайт-портфолио</h1>
+    </header>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li><a class="nav-link" href="index.html">Главная</a></li>
+            <li><a class="nav-link" href="news.html">Новости</a></li>
+            <li><a class="nav-link" href="practices.html">Практики</a></li>
+            <li><a class="nav-link" href="goods.html">Товары</a></li>
+            <li><a class="nav-link" href="contacts.html">Контакты</a></li>
+        </ul>
+    </nav>
+    <main class="content">
+        <section class="profile-header">
+            <h2>Информация об авторе</h2>
+            <img src="photo1.jpg" alt="Фото автора" width="120" height="120" style="border-radius:50%;margin-bottom:20px;">
+            <div class="profile-name"><b>Хамрокулов Самир Сухробович</b></div>
+            <div class="profile-group">ЭФБО-12-24</div>
+        </section>
+        <section class="about-me">
+            <h2>Обо мне</h2>
+            <ul>
+                <li>Я родился в не Москве, в 2006-м на краю города.</li>
+                <li>зарабатываю деньги</li>
+                <li>жму 1кг от груди</li>
+                <li>моргаю раз в час</li>
+                <li>умею летать</li>
             </ul>
-        </nav>
-
-        <main class="content">
-            <article class="profile-header">
-                <h2 class="profile-title">Информация об авторе</h2>
-                <h3 class="profile-name">Хамрокулов Самир Сухробович</h3>
-                <p class="profile-group">ЭФБО-12-24</p>
-            </article>
-
-            <section class="about-me">
-                <h2>Обо мне</h2>
-                <p>Я родился в не Москве, в 2006-м на краю города.</p>
-                <p>зарабатываю деньги</p>
-                <p>жму 1кг от груди</p>
-                <p>моргаю раз в час</p>
-                <p>умею летать</p>
-            </section>
-
-            <section class="skills-container">
-                <h2>Мои навыки</h2>
-                <div class="skills-grid">
-                    <div class="skill-tag">Python</div>
-                    <div class="skill-tag">JavaScript</div>
-                    <div class="skill-tag">HTML/CSS</div>
-                    <div class="skill-tag">Git</div>
-                    <div class="skill-tag">PostgreSQL</div>
-                    <div class="skill-tag">React</div>
-                </div>
-            </section>
-
-            <section class="experience-section">
-                <h2 class="section-title">Мой опыт работы</h2>
-                <div class="experience-grid">
-                    <article class="experience-card">
-                        <h3 class="experience-title">Яндекс Go</h3>
-                        <p class="experience-desc">Работал курьером Яндекс Go.</p>
-                    </article>
-                    <article class="experience-card">
-                        <h3 class="experience-title">МегаМаркет</h3>
-                        <p class="experience-desc">Работал сборщиком заказов в МегаМаркете.</p>
-                    </article>
-                    <article class="experience-card">
-                        <h3 class="experience-title">ДоДо</h3>
-                        <p class="experience-desc">Работал велокурьером в ДоДо.</p>
-                    </article>
-                </div>
-            </section>
-        </main>
-
-        <footer class="footer">
-            <p
+        </section>
+        <section class="skills-container">
+            <h2>Мои навыки</h2>
+            <div class="skills-grid">
+                <span class="skill-tag">Python</span>
+                <span class="skill-tag">JavaScript</span>
+                <span class="skill-tag">HTML/CSS</span>
+                <span class="skill-tag">Git</span>
+                <span class="skill-tag">PostgreSQL</span>
+                <span class="skill-tag">React</span>
+            </div>
+        </section>
+        <section class="experience-section">
+            <h2>Мой опыт работы</h2>
+            <div class="experience-grid">
+                <article class="experience-card">
+                    <h3>Яндекс Go</h3>
+                    <ul>
+                        <li>Курьер</li>
+                    </ul>
+                </article>
+                <article class="experience-card">
+                    <h3>МегаМаркет</h3>
+                    <ul>
+                        <li>Сборщик заказов</li>
+                    </ul>
+                </article>
+                <article class="experience-card">
+                    <h3>ДоДо</h3>
+                    <ul>
+                        <li>Велокурьер</li>
+                    </ul>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>© 2025 Хамрокулов Самир Сухробович</p>
+    </footer>
+</div>
+</body>
+</html>
