--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         <section class="profile-header">
             <h2>Информация об авторе</h2>
             <img src="photo1.jpg" alt="Фото автора" width="120" height="120" style="border-radius:50%;margin-bottom:20px;">
-            <div class="profile-name"><b>Хамрокулов Самир Сухробович</b></div>
+            <div class="profile-name"><b>Хамрокулов Самир</b></div>
             <div class="profile-group">ЭФБО-12-24</div>
         </section>
         <section class="about-me">
-            <h2>Обо мне</h2>
+            <h2>Обо мне:</h2>
             <ul>
-                <li>Я родился в не Москве, в 2006-м на краю города.</li>
-                <li>зарабатываю деньги</li>
-                <li>жму 1кг от груди</li>
-                <li>моргаю раз в час</li>
-                <li>умею летать</li>
+                <li>я родился не в Москве, в 2006-м на краю города.</li>
+                <li>зарабатываю деньги!</li>
+                <li>жму 1кг от груди!</li>
+                <li>моргаю раз в час(￣ω￣)!</li>
+                <li>умею летать?!</li>
             </ul>
         </section>
         <section class="skills-container">
             <h2>Мои навыки</h2>
             <div class="skills-grid">
                 <span class="skill-tag">Python</span>
-                <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">HTML/CSS</span>
-                <span class="skill-tag">Git</span>
-                <span class="skill-tag">PostgreSQL</span>
-                <span class="skill-tag">React</span>
+                <span class="skill-tag">Brawl Stars</span>
+                <span class="skill-tag">Valorant</span>
+                <span class="skill-tag">Binance</span>
+                <span class="skill-tag">Minecraft</span>
+                <span class="skill-tag">Bababoi!</span>
             </div>
         </section>
         <section class="experience-section">
